--- a/deps/src/Makefile
+++ b/deps/src/Makefile
@@ -7,34 +7,24 @@ endif
 .PHONY: all clean check-env default
 
 check-env:
-ifndef JULIA_ROOT
-  $(error Environment variable JULIA_ROOT is not set.)
+ifndef LLVM_CONFIG
+	$(error Please set environment variable LLVM_CONFIG)
 endif
 
 CXX = g++
 FLAGS = -Wall -Wno-strict-aliasing -fno-omit-frame-pointer -fPIC 
 CXXFLAGS = -g
-LIBS =
-LLVM_VER = 3.3
-
-LLVM_CONFIG ?= $(JULIA_ROOT)/usr/bin/llvm-config
 
 INC += -I$(shell $(LLVM_CONFIG) --includedir)
-LIB_DIR += -L$(shell $(LLVM_CONFIG) --libdir)
+LLVM_LIB = $(shell $(LLVM_CONFIG) --libdir)
+LLVM_SRC = $(shell $(LLVM_CONFIG) --src-root)
+LIBS = -L$(LLVM_LIB)
 
 ifdef USE_CLANG_CPP
-  JLIB = "$(JULIA_ROOT)/usr/lib"
-  INC += -I"$(JULIA_ROOT)/deps/llvm-$(LLVM_VER)/tools/clang/tools/libclang"
-  LIBS += -Wl,--whole-archive -Wl,--whole-archive \
-          "$(JLIB)/libclang.a" "$(JLIB)/libclangAST.a" "$(JLIB)/libclangAnalysis.a" \
-          "$(JLIB)/libclangARCMigrate.a" "$(JLIB)/libclangASTMatchers.a" "$(JLIB)/libclangBasic.a" \
-          "$(JLIB)/libclangCodeGen.a" "$(JLIB)/libclangDriver.a" "$(JLIB)/libclangEdit.a" \
-          "$(JLIB)/libclangFormat.a" "$(JLIB)/libclangFrontend.a" "$(JLIB)/libclangFrontendTool.a" \
-          "$(JLIB)/libclangLex.a" "$(JLIB)/libclangParse.a" "$(JLIB)/libclangRewriteCore.a" \
-          "$(JLIB)/libclangRewriteFrontend.a" "$(JLIB)/libclangSema.a" \
-          "$(JLIB)/libclangSerialization.a" "$(JLIB)/libclangStaticAnalyzerCore.a" \
-          "$(JLIB)/libclangStaticAnalyzerFrontend.a" "$(JLIB)/libclangTooling.a" \
-          -Wl,--no-whole-archive -l"LLVM-$(LLVM_VER)"
+  INC += -I"$(LLVM_SRC)/tools/clang/tools/libclang"
+  LIBS += -Wl,--whole-archive					\
+          $(addprefix $(LLVM_LIB)/,$(shell $(LLVM_CONFIG) --libnames))	\
+          -Wl,--no-whole-archive
   CXXFLAGS += -DUSE_CLANG_CPP
 endif
 
@@ -65,7 +55,7 @@ default: libwrapclang.$(SHLIB_EXT)
 	$(CXX) $< -fPIC -c -o $@ $(INC) $(CXXFLAGS) $(FLAGS)
 
 libwrapclang.$(SHLIB_EXT): $(OBJS)
-	$(CXX) $(OBJS) -rdynamic -shared -o $@ $(LIB_DIR) $(LDFLAGS) $(LIBS)
+	$(CXX) $(OBJS) -rdynamic -shared -o $@ -L$(LLVM_LIB) $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -f *.o *.$(SHLIB_EXT)
